app/globals.css
:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --primary: #f80d5a;
    --background: #000000;
    --foreground: #ededed;
    --text: #8a959b;
    --shadow-text: #0b0c0d;
    --header-background: #202121;
  }
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: "Gotham HTF", Arial, Helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  font-feature-settings: "kern" 1;
  font-kerning: normal;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

#smooth-wrapper {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  overflow: hidden;
  z-index: 1;
}

#smooth-content {
  min-height: 100vh;
  width: 100%;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

@font-face {
  font-family: "Gotham HTF";
  src: url("/fonts/gotham/gotham-htf-ultra.woff2") format("woff2"),
    url("/fonts/gotham/gotham-htf-ultra.woff") format("woff");
  font-weight: 900;
  font-style: normal;
}

@font-face {
  font-family: "Gotham HTF";
  src: url("/fonts/gotham/gotham-htf-black.woff2") format("woff2"),
    url("/fonts/gotham/gotham-htf-black.woff") format("woff");
  font-weight: 800;
  font-style: normal;
}

@font-face {
  font-family: "Gotham HTF";
  src: url("/fonts/gotham/gotham-htf-bold.woff2") format("woff2"),
    url("/fonts/gotham/gotham-htf-bold.woff") format("woff");
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: "Gotham HTF";
  src: url("/fonts/gotham/gotham-htf-medium.woff2") format("woff2"),
    url("/fonts/gotham/gotham-htf-medium.woff") format("woff");
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: "Gotham HTF";
  src: url("/fonts/gotham/gotham-htf-book.woff2") format("woff2"),
    url("/fonts/gotham/gotham-htf-book.woff") format("woff");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Gotham HTF";
  src: url("/fonts/gotham/gotham-htf-light.woff2") format("woff2"),
    url("/fonts/gotham/gotham-htf-light.woff") format("woff");
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: "Gotham HTF";
  src: url("/fonts/gotham/gotham-htf-thin.woff2") format("woff2"),
    url("/fonts/gotham/gotham-htf-thin.woff") format("woff");
  font-weight: 200;
  font-style: normal;
}

